packages/edxml-test-corpus/edxml_test_corpus-3.0.1-py3-none-any.whl/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/relation-references-unknown-property.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if a property relation referencing an undefined property is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:mc"/>
    </object-types>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="b" optional="true" multivalued="true" confidence="10" merge="match"/>
        </properties>
        <relations>
          <unknown source="a" target="c" description="[[a]] related to [[b]]" confidence="1" predicate="related"/>
        </relations>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
</edxml>
